# wassily_poster

./: Cargo.toml  README.md  index.html
src/: main.rs
