[package]
name = "vanilla-example"
version = "0.1.0"
authors = ["Philip Peterson <pc.peterso@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.56", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "Node",
    "Text",
    "HtmlCanvasElement",
    "DomRect",
    "CanvasGradient",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d"
] }
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"
rand = "0.8.4"
getrandom = { version = "0.2.4", features = ["js"] }
log = "0.4.14"
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"
